Corrigindo bugs no verificar.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
         android:layout_marginStart="39dp"
         android:layout_marginEnd="39dp"
         android:layout_marginBottom="45dp"
-        android:text="Sorteio"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewSaida"
@@ -42,7 +41,7 @@
         android:layout_marginStart="42dp"
         android:layout_marginEnd="42dp"
         android:layout_marginBottom="38dp"
-        android:text="resposta"
+        android:text="Clique em próxima pra começar"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textEntrada"
@@ -58,7 +57,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="38dp"
-        android:text="pontos"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textViewOutput"
